--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,5 @@
-# playlist-iptv-and-vod
-CHANNEL TV&amp;VOD
-Vod#
+#EXTM3U#
+VOD
 EXTINF:-1 tvg-id="" tvg-name="Harry Potter 20th Anniversary: Return to Hogwarts (2022)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/34Xss3gwKdwvtomCDkeC2lW4PVB.jpg" group-title="NEW MOVIES(2021 - 22)",Harry Potter 20th Anniversary: Return to Hogwarts (2022)
 http://qqtv.nl:8080/movie/Mike1234/Mike1234/433622.mp4
 #EXTINF:-1 tvg-id="" tvg-name="2021 and Done with Snoop Dogg & Kevin Hart (2021)" tvg-logo="https://image.tmdb.org/t/p/w600_and_h900_bestv2/wihCaw9E6XGsHzzt6L1cqyY8KgF.jpg" group-title="NEW MOVIES(2021 - 22)",2021 and Done with Snoop Dogg & Kevin Hart (2021)
